...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chronometer"
        tools:text="@string/ten_minutes"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
...
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer"/>

    <ImageButton
        android:id="@+id/scoreUpLeft"
        app:srcCompat="@drawable/triangle_up"
        android:contentDescription="@string/increase_left_score"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/scoreDownLeft"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <ImageButton
        android:id="@+id/scoreUpRight"
        app:srcCompat="@drawable/triangle_up"
        android:contentDescription="@string/increase_right_score"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="@+id/scoreDownRight"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
        android:id="@+id/scoreLeft"
        android:text="@string/initial_score"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/scoreDownLeft"
...
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreUpLeft"/>

    <TextView
        android:id="@+id/scoreRight"
        android:text="@string/initial_score"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
...
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreSeparator"/>

    <TableRow
        android:id="@+id/timeoutRow"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
...
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreDownLeft">

        <Button
            android:id="@+id/minus1"
            android:text="@string/reduce_timeout"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/timeoutCounter"
            tools:text = "@string/ten_minutes_no_milli"
            android:countDown="true"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/plus1"
            android:text="@string/increase_timeout"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </TableRow>

...
        android:contentDescription="@string/foul_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/playPauseButton"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellow"
        app:layout_constraintVertical_bias="0.0">

...
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/resetButton"
        app:srcCompat="@drawable/reset"
        android:contentDescription="@string/reset_button"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_width="100dp"
        android:layout_height="100dp"
...
